[package]
name = "reduce"
version = "0.0.0"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[lib]
crate-type = ["dylib", "lib"]

[dependencies]
spirv-std = { workspace = true }

[package.metadata.release]
release = false
