[package]
name = "shared"
version = "0.0.0"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
spirv-std = { workspace = true }
bytemuck = { version = "1.18.0", features = ["derive"] }

[package.metadata.release]
release = false
