[package]
name = "simplest-shader"
version = "0.0.0"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[lib]
crate-type = ["dylib"]

[dependencies]
spirv-std = { workspace = true }
shared = { path = "../shared" }

[package.metadata.release]
release = false
