[package]
name = "difftest"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

# See rustc_codegen_spirv/Cargo.toml for details on these features
[features]
use-installed-tools = [
    "spirv-builder/use-installed-tools"
]
use-compiled-tools = [
    "spirv-builder/use-compiled-tools"
]

[target.'cfg(not(target_arch = "spirv"))'.dependencies]
spirv-builder.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wgpu = { version = "25.0.2", features = ["spirv", "vulkan-portability", "static-dxc"] }
vulkano = { version = "0.35.1", default-features = false }
naga = { version = "25.0.1", features = ["glsl-in", "spv-out"] }
tempfile = "3.5"
futures = "0.3.31"
bytemuck = "1.21.0"
anyhow = "1.0.98"

[lints]
workspace = true
