[package]
name = "difftest"
version = "0.0.0"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

# See rustc_codegen_spirv/Cargo.toml for details on these features
[features]
use-installed-tools = [
    "spirv-builder/use-installed-tools"
]
use-compiled-tools = [
    "spirv-builder/use-compiled-tools"
]

[target.'cfg(not(target_arch = "spirv"))'.dependencies]
spirv-builder.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wgpu = { version = "27.0.1", default-features = false, features = ["std", "parking_lot", "spirv", "wgsl", "vulkan", "vulkan-portability", "metal"] }
ash = { version = "0.38" }
tempfile = "3.5"
futures = "0.3.31"
bytemuck = "1.21.0"
anyhow = "1.0.98"

[lints]
workspace = true

[package.metadata.release]
release = false
