[workspace]
resolver = "2"
members = [
    "simple-compute/simple-compute-rust",
    "simple-compute/simple-compute-wgsl",
    "arch/atomic_ops/atomic_ops-rust",
    "arch/atomic_ops/atomic_ops-wgsl",
    "arch/workgroup_memory/workgroup_memory-rust",
    "arch/workgroup_memory/workgroup_memory-wgsl",
    "arch/workgroup_memory/workgroup_memory-ash",
    "arch/memory_barriers/memory_barriers-rust",
    "arch/memory_barriers/memory_barriers-wgsl",
    "arch/vector_extract_insert/vector_extract_insert-rust",
    "arch/vector_extract_insert/vector_extract_insert-wgsl",
    "arch/push_constants/push_constants-rust",
    "arch/push_constants/push_constants-wgsl",
    "storage_class/array_access/array_access-rust",
    "storage_class/array_access/array_access-wgsl",
    "lang/abi/vector_layout/cpu",
    "lang/abi/vector_layout/rust-gpu",
    "lang/abi/vector_layout_cuda/cpu",
    "lang/abi/vector_layout_cuda/rust-gpu",
    "lang/abi/vector_layout_scalar_math/cpu",
    "lang/abi/vector_layout_scalar_math/rust-gpu",
    "lang/control_flow/control_flow-rust",
    "lang/control_flow/control_flow-wgsl",
    "lang/control_flow_complex/control_flow_complex-rust",
    "lang/control_flow_complex/control_flow_complex-wgsl",
    "lang/core/ops/math_ops/math_ops-rust",
    "lang/core/ops/math_ops/math_ops-wgsl",
    "lang/core/ops/vector_ops/vector_ops-rust",
    "lang/core/ops/vector_ops/vector_ops-wgsl",
    "lang/core/ops/matrix_ops/matrix_ops-rust",
    "lang/core/ops/matrix_ops/matrix_ops-wgsl",
    "lang/core/ops/bitwise_ops/bitwise_ops-rust",
    "lang/core/ops/const_fold_int/const-expr-cpu",
    "lang/core/ops/const_fold_int/const-expr-shader",
    "lang/core/ops/const_fold_int/const-fold-cpu",
    "lang/core/ops/const_fold_int/const-fold-shader",
    "lang/core/ops/const_fold_int/dynamic-values-cpu",
    "lang/core/ops/const_fold_int/dynamic-values-shader",
    "lang/core/ops/bitwise_ops/bitwise_ops-wgsl",
    "lang/core/ops/trig_ops/trig_ops-rust",
    "lang/core/ops/trig_ops/trig_ops-wgsl",
    "lang/core/ops/vector_swizzle/vector_swizzle-rust",
    "lang/core/ops/vector_swizzle/vector_swizzle-wgsl",
    "lang/core/intrinsics/black_box_noop/with-black-box",
    "lang/core/intrinsics/black_box_noop/without-black-box",
    "lang/abi/scalar_pair/scalar_pair-cpu",
    "lang/abi/scalar_pair/scalar_pair-gpu",
]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[workspace.lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = [
    'cfg(target_arch, values("spirv"))'
] }

[workspace.dependencies]
spirv-std = { path = "../../../crates/spirv-std", version = "=0.9.0" }
difftest = { path = "../../../tests/difftests/lib" }
# External dependencies that need to be mentioned more than once.
num-traits = { version = "0.2.15", default-features = false }
glam = { version = ">=0.30.8", default-features = false }
bytemuck = { version = "1.14", features = ["derive"] }

# Enable incremental by default in release mode.
[profile.release]
incremental = true
# HACK(eddyb) this is the default but without explicitly specifying it, Cargo
# will treat the identical settings in `[profile.release.build-override]` below
# as different sets of `rustc` flags and will not reuse artifacts between them.
codegen-units = 256

# Compile build-dependencies in release mode with the same settings
# as regular dependencies (including the incremental enabled above).
[profile.release.build-override]
opt-level = 3
incremental = true
codegen-units = 256

# HACK(eddyb) reduce the number of linker exports and/or imports, by avoiding
# inter-CGU linkage, to stay under the 64Ki MSVC limit for `rustc_codegen_spirv`
# when building it in "debug mode" (only relevant to CI for now, realistically),
# i.e. working around this issue: https://github.com/rust-lang/rust/issues/53014.
[profile.dev]
# HACK(eddyb) fewer inter-crate exports/imports (not just inter-CGU), but sadly
# not configurable w/o breaking `Cargo.toml` parsing from non-nightly Cargo
# (moved to `.github/workflows/ci.yaml` as `RUSTFLAGS: -Zshare-generics=off`).
#
# rustflags = ["-Zshare-generics=off"]
codegen-units = 1
