[package]
name = "difftest-types"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = "1.0"
bytemuck = "1.21.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
