[package]
name = "difftest"
edition.workspace = true

# See rustc_codegen_spirv/Cargo.toml for details on these features
[features]
use-installed-tools = [
    "spirv-builder/use-installed-tools"
]
use-compiled-tools = [
    "spirv-builder/use-compiled-tools"
]

[target.'cfg(not(target_arch = "spirv"))'.dependencies]
spirv-builder.workspace = true
difftest-types.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wgpu = { version = "27.0.1", default-features = false, features = ["std", "parking_lot", "spirv", "wgsl", "vulkan", "vulkan-portability", "metal"] }
ash = { version = "0.38" }
tempfile = "3.5"
futures = "0.3.31"
bytemuck = "1.21.0"
anyhow.workspace = true

[lints]
workspace = true
