[package]
name = "difftest"
version = "0.0.0"
edition.workspace = true
publish = false

# See rustc_codegen_spirv/Cargo.toml for details on these features
[features]
use-installed-tools = [
    "spirv-builder/use-installed-tools"
]
use-compiled-tools = [
    "spirv-builder/use-compiled-tools"
]

[dependencies]
# DO NOT REMOVE
# These dependencies are needed for feature unification on the cpu target ever since we added `rustc_codegen_spirv` ->
# `naga` dependency, as naga transitively depends on `num-traits` with a different feature set than we do.
spirv-std.workspace = true

[target.'cfg(not(target_arch = "spirv"))'.dependencies]
spirv-builder.workspace = true
difftest-types.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wgpu = { version = "29.0.1", default-features = false, features = ["std", "parking_lot", "spirv", "wgsl", "vulkan", "vulkan-portability", "metal"] }
ash = { version = "0.38" }
tempfile = "3.5"
futures = "0.3.31"
bytemuck = "1.21.0"
anyhow = "1.0.98"

[lints]
workspace = true
