[package]
name = "async-executor-rust-gpu"
edition.workspace = true

[lints]
workspace = true

[lib]
crate-type = ["lib", "dylib"]

[dependencies]
async-executor-cpu = { path = "../cpu" }

# CPU deps (for the test harness)
[target.'cfg(not(target_arch = "spirv"))'.dependencies]
difftest.workspace = true
