[package]
name = "blake3-rust-gpu"
edition.workspace = true

[lints]
workspace = true

[lib]
crate-type = ["rlib", "dylib"]

# Common deps
[dependencies]

# GPU deps
spirv-std.workspace = true
blake3 = {version = "1.8.2", default-features = false}

# CPU deps
[target.'cfg(not(target_arch = "spirv"))'.dependencies]
difftest.workspace = true
