[package]
name = "simple-compute-rust"
edition.workspace = true

[lints]
workspace = true

[lib]
crate-type = ["dylib"]

# Common deps
[dependencies]

# GPU deps
[target.'cfg(target_arch = "spirv")'.dependencies]
spirv-std.workspace = true

# CPU deps
[target.'cfg(not(target_arch = "spirv"))'.dependencies]
difftest.workspace = true
