[package]
name = "workgroup_memory-ash"
edition.workspace = true

[lints]
workspace = true

[lib]
name = "workgroup_memory_ash_shader"
crate-type = ["dylib"]

# Common deps
[dependencies]

# GPU deps
spirv-std.workspace = true

# CPU deps
[target.'cfg(not(target_arch = "spirv"))'.dependencies]
spirv-builder.workspace = true
difftest.workspace = true
bytemuck.workspace = true