[package]
name = "workgroup_memory-rust"
edition.workspace = true

[lints]
workspace = true

# Common deps
[dependencies]

# GPU deps
spirv-std.workspace = true

# CPU deps
[target.'cfg(not(target_arch = "spirv"))'.dependencies]
difftest.workspace = true
bytemuck.workspace = true
anyhow.workspace = true
